primeiro commit html

--- a/pagina.html
+++ b/pagina.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Site para acompanhar o tutorial de dev do NEU">
+    <title>Meu html</title>
 </head>
-<body>
+<body style="font-family: 'Courier New', Courier, monospace;">
+    <div style= "background-color: tomato; text-align: center;" >
+        <h1 >Hello World &copy;</h1>
+        <p >Esse é o site do tomate.</p>
+    </div>
+
+    <div style= "background-color: lightcoral; text-align: center; ">
+        <h1 >Hello World </h1>
+        <p style="color:white; "><small>Qualquer texto .</small> </p>
+    </div>
+
+    <div style="background-color: lightsalmon; text-align: center;">
+        <h2 > Hello World</h2>
+        <p >Qualquer texto .</p>
+        <a  href="https://theuselessweb.com/">Clique aqui</a>
     
+    </div>
 </body>
 </html>
